# psf_interpolation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bindings/: CMakeLists.txt  ellipsoid_psf_bindings.cpp  psfi_bindings.cpp
bindings/tests/: test_ellipsoid_psf_block_low_rank_py.py  test_ellipsoid_psf_fast_block_py.py  test_ellipsoid_psf_kernel_low_rank_py.py  test_ellipsoid_psf_low_rank_py.py  test_ellipsoid_psf_moments_py.py  test_ellipsoid_psf_partition_py.py  test_ellipsoid_psf_py.py  test_ellipsoid_psf_rbf_py.py  test_ellipsoid_psf_source_target_py.py  test_psfi_block_low_rank_py.py  test_psfi_py.py
cmake/: ellipsoid_psfConfig.cmake.in  psfiConfig.cmake.in
dev/: HANDOFF.md  MPI_STRATEGY.md  VECTOR_TENSOR_EXTENSION.md
docs/: README.md  generate_examples.py
docs/examples/: frog_compression.md  frog_kernel.md
docs/notes/: boundary_effects.md  distributed_design.md
examples/: CMakeLists.txt  frog_compression.cpp  frog_kernel.cpp
include/ellipsoid_psf/: block_low_rank.hpp  config.hpp  ellipsoid_psf.hpp  impulse_response_field.hpp  kernel_evaluator.hpp  kernel_low_rank.hpp  low_rank.hpp  moments.hpp  partition.hpp  rbf.hpp
include/psfi/: block_low_rank.hpp  config.hpp  impulse_response_field.hpp  kernel_evaluator.hpp  psfi.hpp  rbf.hpp
tests/: CMakeLists.txt  test_block_low_rank.cpp  test_dimensions.cpp  test_fast_block.cpp  test_impulse_response_field.cpp  test_kernel_evaluator.cpp  test_kernel_low_rank.cpp  test_low_rank.cpp  test_main.cpp  test_moments.cpp  test_partition.cpp  test_rbf.cpp  test_source_target.cpp
