# SPDX-License-Identifier: MIT
[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
# Distribution (PyPI) name — matches the repo. The import name is `ellipsoid_psf`.
name = "ellipsoid-psf"
version = "0.1.0"
description = "Point spread function interpolation with ellipsoidal support: evaluate and compress an integral kernel anywhere from sampled impulse response batches (header-only C++ core with Python bindings)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Nick Alger" }]
requires-python = ">=3.9"
dependencies = ["numpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/NickAlger/ellipsoid_psf"
Repository = "https://github.com/NickAlger/ellipsoid_psf"

[tool.scikit-build]
cmake.version = ">=3.16"

[tool.scikit-build.cmake.define]
ELLIPSOID_PSF_BUILD_PYTHON = "ON"
ELLIPSOID_PSF_BUILD_TESTS = "OFF"

[tool.cibuildwheel]
# CPython 3.9-3.13. Skip musllinux (Alpine), 32-bit, and PyPy for v0.1.
# Coverage mirrors ellipsoid-tree: Linux x86_64, Windows AMD64, and a macOS
# universal2 wheel. ARM/HPC users consume the header-only C++ core from source.
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux* *_i686 *-win32"
build-frontend = "build"
test-requires = "pytest numpy scipy"
test-command = "pytest {project}/bindings/tests"

[tool.cibuildwheel.macos]
archs = "universal2"
